# SilentTextEditor

./: CMakeLists.txt  README.md
